--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -1,5 +1,7 @@
+providers = ["php", "node"]
+
 [phases.setup]
-nixPkgs = ["php82", "composer", "nodejs-20_x"]
+nixPkgs = ["php82", "php82Packages.composer", "nodejs-20_x"]
 
 [phases.install]
 cmds = [
