--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -1,7 +1,7 @@
 providers = ["php", "node"]
 
 [phases.setup]
-nixPkgs = ["php82", "nodejs-20_x"]
+nixPkgs = ["php82", "nodejs_20"]
 
 [phases.install]
 cmds = [
