--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -5,7 +5,8 @@ nixPkgs = ["php82"]
 
 [phases.install]
 cmds = [
-  "composer install --no-dev --optimize-autoloader",
+  "curl -sS https://getcomposer.org/installer | php",
+  "php composer.phar install --no-dev --optimize-autoloader",
   "npm ci",
   "npm run build"
 ]
